# decacan

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  STATUS.md  package.json  pnpm-lock.yaml
crates/decacan-agent-contract/: Cargo.toml
crates/decacan-agent-contract/src/: lib.rs  version.rs
crates/decacan-agent-contract/src/events/: execution_event.rs  mod.rs  validation.rs
crates/decacan-agent-contract/src/request/: context.rs  input.rs  mod.rs  start.rs
crates/decacan-agent-contract/src/schema/: mod.rs
crates/decacan-agent-contract/src/snapshot/: capability_ref.rs  mod.rs  playbook.rs  workflow.rs
crates/decacan-app/: Cargo.toml
crates/decacan-app/src/: lib.rs  main.rs
crates/decacan-app/src/api/: account.rs  approvals.rs  artifacts.rs  assistant.rs  auth.rs  deliverables.rs  evolution_proposals.rs  inbox.rs  members.rs  mod.rs  playbooks.rs  policy.rs  tasks.rs  team_sessions.rs  teams.rs  traces.rs  workspace_home_builder.rs  workspaces.rs
crates/decacan-app/src/app/: mod.rs  recovery.rs  state.rs  wiring.rs
crates/decacan-app/src/dto/: account.rs  activity.rs  approval.rs  artifact.rs  assistant.rs  deliverable.rs  member.rs  mod.rs  playbook.rs  policy.rs  task.rs  team.rs  team_session.rs  trace.rs  workspace.rs
crates/decacan-app/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/decacan-app/src/streams/: mod.rs  task_events.rs
crates/decacan-app/tests/: account_hub_api_test.rs  assistant_api_integration_test.rs  auth_integration_test.rs  console_permissions_test.rs  evolution_proposals_api_test.rs  http_smoke.rs  members_api_test.rs  new_apis_integration_test.rs  playbook_studio_api_test.rs  published_playbook_catalog_test.rs  recovery_integration_test.rs
crates/decacan-auth/: Cargo.toml
crates/decacan-auth/src/: authz.rs  entities.rs  error.rs  lib.rs  rate_limit.rs
crates/decacan-auth/src/service/: auth.rs  mod.rs
crates/decacan-auth/src/storage/: mod.rs  sqlite.rs
crates/decacan-auth/tests/: auth_service_test.rs
crates/decacan-infra/: CHANGELOG.md  Cargo.toml
crates/decacan-infra/migrations/: 001_init.sql  003_assistant_delegations.sql
crates/decacan-infra/src/: lib.rs
crates/decacan-infra/src/clock/: system.rs
crates/decacan-infra/src/config/: loader.rs  mod.rs  postgres.rs  sources.rs
crates/decacan-infra/src/execution_engine/: client.rs  mod.rs
crates/decacan-infra/src/filesystem/: local.rs
crates/decacan-infra/src/logging/: config.rs  mod.rs  subscriber.rs
crates/decacan-infra/src/models/: anthropic.rs  budget.rs  config.rs  mock.rs  mod.rs  openai.rs  openai_compatible.rs  provider.rs  retry.rs  router.rs  streaming.rs  types.rs
crates/decacan-infra/src/persistence/: assistant_delegations.rs  assistant_sessions.rs  authority_grants.rs  decision_records.rs  evolution_proposals.rs  mod.rs  postgres_assistant_delegations.rs  team_sessions.rs
crates/decacan-infra/src/secrets/: env.rs  manager.rs  mod.rs  vault.rs
crates/decacan-infra/src/storage/: memory.rs  mod.rs  postgres.rs  sqlite.rs
crates/decacan-infra/src/team/: adapter.rs  auth.rs  gateway_client.rs  mod.rs  retry.rs  storage.rs
crates/decacan-infra/tests/: budget_test.rs  config_test.rs  logging_test.rs  models_test.rs  postgres_test.rs  retry_test.rs  secrets_test.rs  streaming_test.rs  team_adapter_test.rs  team_gateway_adapter_test.rs  team_gateway_auth_test.rs  team_gateway_client_signing_test.rs
crates/decacan-runtime/: Cargo.toml
crates/decacan-runtime/examples/: capability_workflow.rs
crates/decacan-runtime/fixtures/: discovery_playbook.yaml  summary_playbook.yaml
crates/decacan-runtime/src/: lib.rs
crates/decacan-runtime/src/approval/: entity.rs
crates/decacan-runtime/src/artifact/: entity.rs  mod.rs  relations.rs  service.rs
crates/decacan-runtime/src/assistant/: decision.rs  mod.rs  session.rs
crates/decacan-runtime/src/authority/: evaluator.rs  grant.rs  mod.rs
crates/decacan-runtime/src/capability/: entities.rs  execution.rs  mod.rs  registry.rs  resolver.rs
crates/decacan-runtime/src/contract/: mod.rs  validator.rs
crates/decacan-runtime/src/events/: execution.rs  mod.rs  projector.rs  runtime.rs  task.rs
crates/decacan-runtime/src/execution/: coordinator.rs  mod.rs
crates/decacan-runtime/src/gateway/: descriptor.rs  execution_record.rs  mod.rs  request.rs  result.rs  routine_adapter.rs  semantic_adapter.rs  synthesis_adapter.rs  tool_gateway.rs
crates/decacan-runtime/src/invocation/: http.rs  mod.rs
crates/decacan-runtime/src/merge/: bundle.rs
crates/decacan-runtime/src/outputs/: backup.rs  mod.rs  writer.rs
crates/decacan-runtime/src/persistence/: assistant_delegations.rs  assistant_sessions.rs  authority_grants.rs  decision_records.rs  evolution_proposals.rs  mod.rs  team_sessions.rs
crates/decacan-runtime/src/playbook/: authoring.rs  capability_refs.rs  entity.rs  execution.rs  lifecycle.rs  mod.rs  modes.rs  publish.rs  registry.rs
crates/decacan-runtime/src/policy/: entity.rs
crates/decacan-runtime/src/ports/: assistant_delegation.rs  clock.rs  execution_engine.rs  filesystem.rs  mod.rs  model.rs  storage.rs  team_action_gateway.rs  team_orchestrator.rs
crates/decacan-runtime/src/routine/: context.rs  contract.rs  entity.rs  error.rs  executor.rs  (+3 more)
crates/decacan-runtime/tests/: agent_team_contract_test.rs  attribution.rs  discovery_playbook.rs  entities_roundtrip.rs  events_projection.rs  filesystem_and_storage_integration.rs  gateway_policy.rs  merge_bundle_test.rs  output_backup_and_artifacts.rs  playbook_lifecycle.rs  playbook_publish.rs  playbook_spec.rs  playbook_summary_workflow.rs  registered_playbook_execution.rs  run_and_workflow_types.rs  run_team_state_test.rs  semantic_invocation.rs  summary_playbook_e2e.rs  synthesis_invocation.rs  task_state_machine.rs  team_assignment_test.rs  team_builtin_test.rs  team_entity_test.rs  team_execution_integration_test.rs  team_registry_test.rs  trace_recording.rs  workflow_team_step_test.rs  workspace_entity.rs  workspace_integration.rs  workspace_policy.rs  workspace_rbac.rs  workspace_service.rs  workspace_storage.rs
(+508 files in other folders)
