[package]
name = "decacan-agent-contract"
version = "0.1.0"
edition = "2021"
description = "Protocol contract between Decacan orchestration layer and remote agent execution engines"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"], optional = true }

[features]
default = []
schema = ["dep:time"]
