[package]
name = "decacan-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "http1", "tokio"] }
decacan-runtime = { path = "../decacan-runtime" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
