[package]
name = "decacan-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
decacan-runtime = { path = "../decacan-runtime" }
time = { version = "0.3", features = ["formatting", "parsing"] }

# 新增依赖
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1"

# Secrets 新增
dotenvy = "0.15"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# 日志新增
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
