[package]
name = "decacan-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["serde", "v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
thiserror = "1"

[dev-dependencies]
decacan-infra = { path = "../decacan-infra" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tempfile = "3"
