[package]
name = "decacan-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
thiserror = "1"
async-trait = "0.1"
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
decacan-infra = { path = "../decacan-infra" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tempfile = "3"
